# amr-ros

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  DEBUG_LOG.md  LICENSE  README.md
colcon_ws/: frames_2025-08-06_14.58.23.gv
colcon_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
colcon_ws/log/: latest_build
colcon_ws/src/amr_bringup/: setup.py
colcon_ws/src/amr_bringup/amr_bringup/: listener.py  talker.py
colcon_ws/src/amr_bringup/launch/: talker_listener.launch.py
colcon_ws/src/amr_butler_description/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/amr_butler_description/config/: bridge.yaml
colcon_ws/src/amr_description/: package.xml  setup.py
colcon_ws/src/amr_vision/: package.xml  setup.cfg  setup.py
colcon_ws/src/amr_vision/amr_vision/: camera_detection_node.py  camera_tf_broadcaster.py  fleet_manager_ai.py  ground_truth_waypoint_follower.py
colcon_ws/src/amr_vision/behavior_trees/: navigate_w_recovery.xml
colcon_ws/src/amr_vision/launch/: amr_vision_fleet.launch.py  display_vision.launch.py
colcon_ws/src/amr_vision/maps/: my_map.pgm
colcon_ws/src/amr_vision/urdf/: amr_vision.urdf.xacro
colcon_ws/src/amr_vision/worlds/: map.world
colcon_ws/src/amr_vision/yaml/: nav2_params_amr.yaml
colcon_ws/src/amr_worlds/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/amr_worlds/amr_worlds/: __init__.py
colcon_ws/src/amr_worlds/config/: slam_params.yaml
colcon_ws/src/amr_worlds/launch/: mapping.launch.py  restaurant.launch.py
colcon_ws/src/amr_worlds/maps/: restaurant_map.pgm  restaurant_map.yaml
colcon_ws/src/amr_worlds/rviz/: mapping.rviz
colcon_ws/src/amr_worlds/test/: test_launch_import.py  test_restaurant_sdf.py  test_slam_params.py
colcon_ws/src/amr_worlds/worlds/: restaurant.sdf
docker/: Dockerfile  Dockerfile.butler  README.butler.md  docker-compose.yml  docker_compose.yml  ros_entrypoint.sh
docs/: concierge_architecture.md
(+47 files in other folders)
