<?xml version="1.0"?>
<package format="3">
  <name>amr_vision</name>
  <version>0.1.0</version>
  <description>AI-enabled AMR fleet with YOLO semantic perception</description>
  <maintainer email="shrikrishnarb@gmail.com">shrikrishnarb</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
